api edit svist-post
